need a little modify

--- a/index.htm
+++ b/index.htm
@@ -10,13 +10,17 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/plugins.css" />
     <link rel="stylesheet" href="css/fontawesome.min.css" />
     <link rel="stylesheet" href="css/all.min.css" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header>
+    <header class="header_area">
       <section class="top_header_area">
         <div class="inner_header content">
           <div class="social_area">
@@ -97,6 +101,90 @@
       </div>
     </section>
 
+    <section class="service_area">
+      <div class="inner_service content">
+        <h2 class="title">Our Service</h2>
+        <p class="sub_title">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elite.
+        </p>
+        <div class="main_service">
+          <div class="child_service">
+            <h3>01</h3>
+            <h4><a href="#">Tactical Network Emulation</a></h4>
+            <p>
+              Ad hoc Research Associates has one of the most innovative
+              solutions for visualizing network situational...
+            </p>
+          </div>
+          <div class="child_service">
+            <h3>02</h3>
+            <h4><a href="#">Tactical Network Emulation</a></h4>
+            <p>
+              Ad hoc Research Associates has one of the most innovative
+              solutions for visualizing network situational...
+            </p>
+          </div>
+          <div class="child_service">
+            <h3>03</h3>
+            <h4><a href="#">Tactical Network Emulation</a></h4>
+            <p>
+              Ad hoc Research Associates has one of the most innovative
+              solutions for visualizing network situational...
+            </p>
+          </div>
+          <div class="child_service">
+            <h3>04</h3>
+            <h4><a href="#">Tactical Network Emulation</a></h4>
+            <p>
+              Ad hoc Research Associates has one of the most innovative
+              solutions for visualizing network situational...
+            </p>
+          </div>
+          <div class="child_service">
+            <h3>05</h3>
+            <h4><a href="#">Tactical Network Emulation</a></h4>
+            <p>
+              Ad hoc Research Associates has one of the most innovative
+              solutions for visualizing network situational...
+            </p>
+          </div>
+          <div class="child_service">
+            <h3>06</h3>
+            <h4><a href="#">Tactical Network Emulation</a></h4>
+            <p>
+              Ad hoc Research Associates has one of the most innovative
+              solutions for visualizing network situational...
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="contact_area">
+      <div class="inner_contact">
+        <h2 class="title">Quick Contact</h2>
+        <div class="main_contact_form">
+          <form action="">
+            <input type="text" placeholder="Name*" />
+            <input type="email" placeholder="Email*" />
+            <input type="text" placeholder="Phone" />
+            <input type="text" placeholder="Company" />
+            <textarea placeholder="Message"></textarea>
+            <input type="submit" placeholder="Contact Now" />
+          </form>
+        </div>
+      </div>
+    </section>
+    <footer class="footer_area">
+      <div class="inner_footer content">
+        <div class="footer_logo">
+          <a href="index.htm"><img src="img/foorer_logo.png" alt="" /></a>
+        </div>
+        <div class="copyright_area">
+          <p>&copy; All Rights Reserved By Ali Hossain</p>
+        </div>
+      </div>
+    </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
